welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:5: error: value update is not a member of Boolean
	if (estSurBiscuit()=true) Biscuit=Biscuit+1
            ^