welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var Biscuit=0
while (sortieTrouvee()!=true){
	for (x<-1 to 5)
	if (estSurBiscuit()=true) Biscuit=Biscuit+1
	
if (Biscuit>2) gauche()
else droite()
}
